@@ -6,38 +6,33 @@
  */
 package com.evolveum.midpoint.provisioning.impl.dummy;
 
-import static com.evolveum.midpoint.schema.constants.SchemaConstants.RI_ACCOUNT_OBJECT_CLASS;
+import static com.evolveum.midpoint.schema.constants.SchemaConstants.*;
 
-import static com.evolveum.midpoint.test.util.TestUtil.getAttrQName;
+import static com.evolveum.midpoint.xml.ns._public.common.common_3.ShadowContentDescriptionType.FROM_REPOSITORY;
+
+import static com.evolveum.midpoint.xml.ns._public.common.common_3.ShadowContentDescriptionType.FROM_RESOURCE_COMPLETE;
 
 import static java.util.Objects.requireNonNull;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.testng.AssertJUnit.*;
 
+import static com.evolveum.midpoint.schema.GetOperationOptions.createNoFetchCollection;
 import static com.evolveum.midpoint.test.IntegrationTestTools.assertProvisioningAccountShadow;
 import static com.evolveum.midpoint.test.asserter.predicates.StringAssertionPredicates.startsWith;
 import static com.evolveum.midpoint.test.asserter.predicates.TimeAssertionPredicates.approximatelyCurrent;
+import static com.evolveum.midpoint.test.util.TestUtil.getAttrQName;
 
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.xml.datatype.XMLGregorianCalendar;
 import javax.xml.namespace.QName;
 
-import com.evolveum.icf.dummy.connector.AbstractBaseDummyConnector;
-import com.evolveum.midpoint.prism.xnode.MapXNode;
-import com.evolveum.midpoint.prism.xnode.PrimitiveXNode;
-import com.evolveum.midpoint.provisioning.impl.resources.ConnectorManager;
-import com.evolveum.midpoint.schema.constants.TestResourceOpNames;
-import com.evolveum.midpoint.schema.processor.ResourceObjectTypeDefinition;
-import com.evolveum.midpoint.schema.constants.MidPointConstants;
-import com.evolveum.midpoint.schema.processor.*;
+import com.evolveum.midpoint.schema.internals.InternalsConfig;
+import com.evolveum.midpoint.test.DummyDefaultScenario;
 
-import com.evolveum.midpoint.util.exception.*;
-
-import com.evolveum.prism.xml.ns._public.types_3.RawType;
+import com.evolveum.midpoint.util.exception.ObjectNotFoundException;
 
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
@@ -49,23 +44,28 @@ import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.w3c.dom.Element;
 
+import com.evolveum.icf.dummy.connector.AbstractBaseDummyConnector;
 import com.evolveum.icf.dummy.resource.DummyAccount;
 import com.evolveum.midpoint.prism.*;
 import com.evolveum.midpoint.prism.crypto.EncryptionException;
 import com.evolveum.midpoint.prism.delta.DiffUtil;
 import com.evolveum.midpoint.prism.delta.ObjectDelta;
-import com.evolveum.midpoint.prism.impl.schema.PrismSchemaImpl;
 import com.evolveum.midpoint.prism.match.MatchingRule;
 import com.evolveum.midpoint.prism.path.ItemPath;
-import com.evolveum.midpoint.prism.schema.PrismSchema;
 import com.evolveum.midpoint.prism.util.PrismAsserts;
 import com.evolveum.midpoint.prism.util.PrismTestUtil;
+import com.evolveum.midpoint.prism.xnode.MapXNode;
+import com.evolveum.midpoint.prism.xnode.PrimitiveXNode;
 import com.evolveum.midpoint.provisioning.impl.ProvisioningContext;
-import com.evolveum.midpoint.provisioning.ucf.api.AttributesToReturn;
+import com.evolveum.midpoint.provisioning.impl.resources.ConnectorManager;
+import com.evolveum.midpoint.provisioning.ucf.api.ShadowItemsToReturn;
 import com.evolveum.midpoint.provisioning.ucf.api.ConnectorInstance;
 import com.evolveum.midpoint.schema.*;
+import com.evolveum.midpoint.schema.constants.MidPointConstants;
 import com.evolveum.midpoint.schema.constants.SchemaConstants;
+import com.evolveum.midpoint.schema.constants.TestResourceOpNames;
 import com.evolveum.midpoint.schema.internals.InternalCounters;
+import com.evolveum.midpoint.schema.processor.*;
 import com.evolveum.midpoint.schema.result.OperationResult;
 import com.evolveum.midpoint.schema.result.OperationResultStatus;
 import com.evolveum.midpoint.schema.statistics.ConnectorOperationalStatus;
@@ -74,11 +74,19 @@ import com.evolveum.midpoint.task.api.Task;
 import com.evolveum.midpoint.test.DummyResourceContoller;
 import com.evolveum.midpoint.test.IntegrationTestTools;
 import com.evolveum.midpoint.test.ObjectChecker;
+import com.evolveum.midpoint.test.asserter.RepoShadowAsserter;
+import com.evolveum.midpoint.test.asserter.ShadowAsserter;
 import com.evolveum.midpoint.test.util.TestUtil;
+import com.evolveum.midpoint.util.DOMUtil;
+import com.evolveum.midpoint.util.MiscUtil;
+import com.evolveum.midpoint.util.exception.CommonException;
+import com.evolveum.midpoint.util.exception.ConfigurationException;
+import com.evolveum.midpoint.util.exception.SchemaException;
 import com.evolveum.midpoint.xml.ns._public.common.api_types_3.ObjectModificationType;
 import com.evolveum.midpoint.xml.ns._public.common.common_3.*;
 import com.evolveum.midpoint.xml.ns._public.resource.capabilities_3.*;
 import com.evolveum.prism.xml.ns._public.types_3.ProtectedStringType;
+import com.evolveum.prism.xml.ns._public.types_3.RawType;
 
 /**
  * The test of Provisioning service on the API level. The test is using dummy
@@ -91,10 +99,10 @@ import com.evolveum.prism.xml.ns._public.types_3.ProtectedStringType;
 @Listeners({ com.evolveum.midpoint.tools.testng.AlphabeticalMethodInterceptor.class })
 public class AbstractBasicDummyTest extends AbstractDummyTest {
 
-    protected CachingMetadataType capabilitiesCachingMetadataType;
-    protected String willIcfUid;
-    protected XMLGregorianCalendar lastPasswordModifyStart;
-    protected XMLGregorianCalendar lastPasswordModifyEnd;
+    private CachingMetadataType capabilitiesCachingMetadataType;
+    String willIcfUid;
+    private XMLGregorianCalendar lastPasswordModifyStart;
+    private XMLGregorianCalendar lastPasswordModifyEnd;
 
     protected MatchingRule<String> getUidMatchingRule() {
         return null;
@@ -109,12 +117,14 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
     }
 
     protected int getExpectedRefinedSchemaDefinitions() {
-        return dummyResource.getNumberOfObjectclasses();
+        return dummyResource.getNumberOfObjectClasses();
     }
 
     @AfterClass
     public static void assertCleanShutdown() {
-        dummyResource.assertNoConnections();
+        if (resourceShutDown) {
+            dummyResource.assertNoConnections();
+        }
     }
 
     @Test
@@ -136,7 +146,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertSuccess(result);
 
         // Check connector schema
-        IntegrationTestTools.assertConnectorSchemaSanity(connector, prismContext);
+        IntegrationTestTools.assertConnectorSchemaSanity(connector);
 
         IntegrationTestTools.assertNoSchema(resource);
     }
@@ -166,22 +176,21 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
             XmlSchemaType xmlSchemaType = conn.getSchema();
             assertNotNull("xmlSchemaType is null", xmlSchemaType);
-            Element connectorXsdSchemaElement = ConnectorTypeUtil.getConnectorXsdSchema(conn);
-            assertNotNull("No schema", connectorXsdSchemaElement);
+            Element connectorXsdSchemaElement = ConnectorTypeUtil.getConnectorXsdSchemaElementRequired(conn);
 
             // Try to parse the schema
-            PrismSchema schema = PrismSchemaImpl.parse(connectorXsdSchemaElement, true, "connector schema " + conn, prismContext);
+            ConnectorSchema schema = ConnectorSchemaFactory.parse(connectorXsdSchemaElement, "connector schema " + conn);
             assertNotNull("Cannot parse schema", schema);
             assertFalse("Empty schema", schema.isEmpty());
 
             displayDumpable("Parsed connector schema " + conn, schema);
 
             QName configurationElementQname = new QName(conn.getNamespace(), ResourceType.F_CONNECTOR_CONFIGURATION.getLocalPart());
-            PrismContainerDefinition configurationContainer = schema
-                    .findContainerDefinitionByElementName(configurationElementQname);
+            var configurationContainer = schema.findContainerDefinitionByElementName(configurationElementQname);
             assertNotNull("No " + configurationElementQname + " element in schema of " + conn, configurationContainer);
-            PrismContainerDefinition definition = schema
-                    .findItemDefinitionByElementName(new QName(ResourceType.F_CONNECTOR_CONFIGURATION.getLocalPart()),
+            var definition =
+                    schema.findItemDefinitionByElementName(
+                            new QName(ResourceType.F_CONNECTOR_CONFIGURATION.getLocalPart()),
                             PrismContainerDefinition.class);
             assertNotNull("Definition of <configuration> property container not found", definition);
             assertFalse("Empty definition", definition.isEmpty());
@@ -231,7 +240,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
             XmlSchemaType xmlSchemaType = resourceType.getSchema();
             if (xmlSchemaType != null) {
-                Element xsdSchemaElement = ResourceTypeUtil.getResourceXsdSchema(resourceType);
+                Element xsdSchemaElement = ResourceTypeUtil.getResourceXsdSchemaElement(resourceType);
                 assertNull("Found schema in " + resource, xsdSchemaElement);
             }
         }
@@ -294,7 +303,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         PrismObject<ResourceType> resourceAfter = resource.asPrismObject();
         XmlSchemaType xmlSchemaTypeAfter = resourceAfter.asObjectable().getSchema();
         assertNull("Resource contains schema after partial configuration test", xmlSchemaTypeAfter);
-        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchema(resourceAfter);
+        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchemaElement(resourceAfter);
         assertNull("Resource contains schema after partial configuration test", resourceXsdSchemaElementAfter);
         assertNull("Resource contains capabilities after partial configuration test", resource.getCapabilities());
 
@@ -316,8 +325,11 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
     }
 
     private int getSizeOfConnectorCache() {
-        return connectorManager.getStateInformation().stream().filter(
-                state -> ConnectorManager.CONNECTOR_INSTANCE_CACHE_NAME.equals(state.getName())).findFirst().get().getSize();
+        return connectorManager.getStateInformation().stream()
+                .filter(state -> ConnectorManager.CONNECTOR_INSTANCE_CACHE_NAME.equals(state.getName()))
+                .findFirst()
+                .orElseThrow()
+                .getSize();
     }
 
     @Test
@@ -351,11 +363,11 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         PrismProperty<Object> instanceId = resource.asPrismObject().findProperty(
                 ItemPath.create(
                         ResourceType.F_CONNECTOR_CONFIGURATION,
-                        SchemaConstants.CONNECTOR_SCHEMA_CONFIGURATION_PROPERTIES_ELEMENT_LOCAL_NAME,
+                        SchemaConstants.ICF_CONFIGURATION_PROPERTIES_LOCAL_NAME,
                         "instanceId"));
         @NotNull PrismContainerValue<Containerable> confPropertiesContainer = resource.asPrismObject().findContainer(
                 ItemPath.create(ResourceType.F_CONNECTOR_CONFIGURATION,
-                        SchemaConstants.CONNECTOR_SCHEMA_CONFIGURATION_PROPERTIES_ELEMENT_LOCAL_NAME)).getValue();
+                        SchemaConstants.ICF_CONFIGURATION_PROPERTIES_LOCAL_NAME)).getValue();
         confPropertiesContainer.remove(instanceId);
 
         assertNotNull("No connector ref", resource.getConnectorRef());
@@ -380,7 +392,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         PrismObject<ResourceType> resourceAfter = resource.asPrismObject();
         XmlSchemaType xmlSchemaTypeAfter = resourceAfter.asObjectable().getSchema();
         assertNull("Resource contains schema after partial configuration test", xmlSchemaTypeAfter);
-        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchema(resourceAfter);
+        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchemaElement(resourceAfter);
         assertNull("Resource contains schema after partial configuration test", resourceXsdSchemaElementAfter);
         assertNull("Resource contains capabilities after partial configuration test", resource.getCapabilities());
 
@@ -480,7 +492,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
         XmlSchemaType xmlSchemaTypeAfter = resourceTypeRepoAfter.getSchema();
         assertNotNull("No schema after test connection", xmlSchemaTypeAfter);
-        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchema(resourceTypeRepoAfter);
+        Element resourceXsdSchemaElementAfter = ResourceTypeUtil.getResourceXsdSchemaElement(resourceTypeRepoAfter);
         assertNotNull("No schema after test connection", resourceXsdSchemaElementAfter);
 
         IntegrationTestTools.displayXml("Resource XML", resourceRepoAfter);
@@ -491,7 +503,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertNotNull("No serialNumber", cachingMetadata.getSerialNumber());
 
         Element xsdElement = ObjectTypeUtil.findXsdElement(xmlSchemaTypeAfter);
-        ResourceSchema parsedSchema = ResourceSchemaParser.parse(xsdElement, resourceTypeBefore.toString());
+        ResourceSchema parsedSchema = ResourceSchemaFactory.parseNativeSchemaAsBare(xsdElement);
         assertNotNull("No schema after parsing", parsedSchema);
 
         // schema will be checked in next test
@@ -549,10 +561,10 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         PrismProperty<Object> supportValidity = resource.findOrCreateProperty(
                 ItemPath.create(
                         ResourceType.F_CONNECTOR_CONFIGURATION,
-                        SchemaConstants.CONNECTOR_SCHEMA_CONFIGURATION_PROPERTIES_ELEMENT_LOCAL_NAME,
+                        SchemaConstants.ICF_CONFIGURATION_PROPERTIES_LOCAL_NAME,
                         "supportValidity"));
 
-        supportValidity.setRealValue(Boolean.valueOf((String)getRealValue(supportValidity)) ? false : true);
+        supportValidity.setRealValue(!Boolean.parseBoolean((String) getRealValue(supportValidity)));
 
         List<String> expectedSuggestions =
                 List.of(getSuggestionForProperty(resource, "instanceId"),
@@ -573,9 +585,12 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 .as("suggested properties")
                 .hasSize(1);
         suggestions.forEach(suggestion -> {
-            Collection<?> suggestionValues = suggestion.getDefinition().getSuggestedValues().stream()
-                    .map(displayVal -> displayVal.getValue()).collect(Collectors.toList());
-            assertTrue("Unexpected value of suggestion " + suggestion.getDefinition().getSuggestedValues() + ", expected: " + expectedSuggestions,
+            Collection<?> suggestionValues = requireNonNull(suggestion.getDefinition().getSuggestedValues()).stream()
+                    .map(displayVal -> displayVal.getValue())
+                    .toList();
+            //noinspection SuspiciousMethodCalls
+            assertTrue(
+                    "Unexpected value of suggestion " + suggestion.getDefinition().getSuggestedValues() + ", expected: " + expectedSuggestions,
                     expectedSuggestions.containsAll(suggestionValues));
         });
 
@@ -600,8 +615,9 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 return  ((RawType) property.getRealValue()).getValue();
             } catch (SchemaException e) {
                 //ignore exception
-                PrimitiveXNode primitiveXNode = ((PrimitiveXNode)((MapXNode) ((RawType) property.getRealValue())
-                        .getXnode()).get(new QName("clearValue")));
+                var primitiveXNode = ((PrimitiveXNode<?>)
+                        ((MapXNode) ((RawType) property.getRealValue()).getXnode())
+                                .get(new QName("clearValue")));
                 if (primitiveXNode != null) {
                     return primitiveXNode.getStringValue();
                 }
@@ -616,7 +632,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         PrismProperty<Object> property = resource.findProperty(
                 ItemPath.create(
                         ResourceType.F_CONNECTOR_CONFIGURATION,
-                        SchemaConstants.CONNECTOR_SCHEMA_CONFIGURATION_PROPERTIES_ELEMENT_LOCAL_NAME,
+                        SchemaConstants.ICF_CONFIGURATION_PROPERTIES_LOCAL_NAME,
                         propertyName));
         Object value = null;
         if (property != null) {
@@ -634,6 +650,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         when();
         resource = provisioningService.getObject(ResourceType.class, RESOURCE_DUMMY_OID, null, task, result);
         resourceBean = resource.asObjectable();
+        resourceInitialized = true;
 
         then();
         assertSuccess(result);
@@ -644,20 +661,19 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
         PrismContainer<Containerable> configurationContainer = resource.findContainer(ResourceType.F_CONNECTOR_CONFIGURATION);
         assertNotNull("No configuration container", configurationContainer);
-        PrismContainerDefinition confContDef = configurationContainer.getDefinition();
+        var confContDef = configurationContainer.getDefinition();
         assertNotNull("No configuration container definition", confContDef);
-        PrismContainer configurationPropertiesContainer = configurationContainer
-                .findContainer(SchemaConstants.CONNECTOR_SCHEMA_CONFIGURATION_PROPERTIES_ELEMENT_QNAME);
+        var configurationPropertiesContainer = configurationContainer.findContainer(SchemaConstants.ICF_CONFIGURATION_PROPERTIES_NAME);
         assertNotNull("No configuration properties container", configurationPropertiesContainer);
-        PrismContainerDefinition confPropsDef = configurationPropertiesContainer.getDefinition();
+        var confPropsDef = configurationPropertiesContainer.getDefinition();
         assertNotNull("No configuration properties container definition", confPropsDef);
-        Collection<PrismProperty<?>> configurationProperties = configurationPropertiesContainer.getValue().getItems();
+        var configurationProperties = configurationPropertiesContainer.getValue().getItems();
         assertFalse("No configuration properties", configurationProperties.isEmpty());
-        for (PrismProperty<?> confProp : configurationProperties) {
-            PrismPropertyDefinition confPropDef = confProp.getDefinition();
+        for (var confProp : configurationProperties) {
+            var confPropDef = confProp.getDefinition();
             assertNotNull("No definition for configuration property " + confProp, confPropDef);
             assertFalse("Configuration property " + confProp + " is raw", confProp.isRaw());
-            assertConfigurationProperty(confProp);
+            assertConfigurationProperty((PrismProperty<?>) confProp);
         }
 
         // The useless configuration variables should be reflected to the resource now
@@ -682,21 +698,17 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         expect("The returned type should have the schema pre-parsed");
         assertTrue(ResourceSchemaFactory.hasParsedSchema(resourceBean));
 
-        // Also test if the utility method returns the same thing
-        ResourceSchema returnedSchema = ResourceSchemaFactory.getRawSchema(resourceBean);
+        var completeSchema = ResourceSchemaFactory.getCompleteSchemaRequired(resourceBean);
+        displayDumpable("Parsed complete schema", completeSchema);
 
-        displayDumpable("Parsed resource schema", returnedSchema);
+        assertCompleteSchemaCached(completeSchema, ResourceSchemaFactory.getCompleteSchemaRequired(resourceBean));
+        rememberCompleteResourceSchema(completeSchema);
 
-        // Check whether it is reusing the existing schema and not parsing it
-        // all over again
-        // Not equals() but == ... we want to really know if exactly the same
-        // object instance is returned
-        assertTrue("Broken caching",
-                returnedSchema == ResourceSchemaFactory.getRawSchema(resourceBean));
+        BareResourceSchema bareSchema = ResourceSchemaFactory.getBareSchema(resourceBean);
+        rememberBareResourceSchema(bareSchema);
 
-        assertSchemaSanity(returnedSchema, resourceBean);
+        assertBareSchemaSanity(bareSchema, resourceBean);
 
-        rememberResourceSchema(returnedSchema);
         assertSteadyResource();
         dummyResource.assertConnections(4);
         assertDummyConnectorInstances(1);
@@ -707,17 +719,12 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         // GIVEN
 
         // WHEN
-        ResourceSchema refinedSchema = ResourceSchemaFactory.getCompleteSchema(resourceBean);
-        displayDumpable("Refined schema", refinedSchema);
+        var completeSchema = ResourceSchemaFactory.getCompleteSchemaRequired(resourceBean);
+        displayDumpable("Refined schema", completeSchema);
 
-        // Check whether it is reusing the existing schema and not parsing it
-        // all over again
-        // Not equals() but == ... we want to really know if exactly the same
-        // object instance is returned
-        assertTrue("Broken caching",
-                refinedSchema == ResourceSchemaFactory.getCompleteSchema(resourceBean));
+        assertCompleteSchemaCached(completeSchema, ResourceSchemaFactory.getCompleteSchema(resourceBean));
 
-        ResourceObjectDefinition accountDef = refinedSchema.findDefaultDefinitionForKind(ShadowKindType.ACCOUNT);
+        ResourceObjectDefinition accountDef = completeSchema.findDefaultDefinitionForKind(ShadowKindType.ACCOUNT);
         assertNotNull("Account definition is missing", accountDef);
         assertNotNull("Null identifiers in account", accountDef.getPrimaryIdentifiers());
         assertFalse("Empty identifiers in account", accountDef.getPrimaryIdentifiers().isEmpty());
@@ -725,9 +732,10 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertFalse("Empty secondary identifiers in account", accountDef.getSecondaryIdentifiers().isEmpty());
         assertNotNull("No naming attribute in account", accountDef.getNamingAttribute());
         assertFalse("No nativeObjectClass in account",
-                StringUtils.isEmpty(accountDef.getObjectClassDefinition().getNativeObjectClass()));
+                StringUtils.isEmpty(accountDef.getObjectClassDefinition().getNativeObjectClassName()));
 
         ResourceObjectTypeDefinition accountTypeDef = accountDef.getTypeDefinition();
+        assertNotNull("Account type definition is missing", accountTypeDef);
         assertEquals("Unexpected kind in account definition", ShadowKindType.ACCOUNT, accountTypeDef.getKind());
         assertTrue("Account definition in not default", accountTypeDef.isDefaultForKind());
         assertEquals("Wrong intent in account definition", SchemaConstants.INTENT_DEFAULT, accountTypeDef.getIntent());
@@ -735,7 +743,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertFalse("Account definition in auxiliary",
                 accountDef.getObjectClassDefinition().isAuxiliary());
 
-        ResourceAttributeDefinition<?> uidDef = accountDef.findAttributeDefinition(SchemaConstants.ICFS_UID);
+        ShadowSimpleAttributeDefinition<?> uidDef = accountDef.findSimpleAttributeDefinitionRequired(SchemaConstants.ICFS_UID);
         assertEquals(1, uidDef.getMaxOccurs());
         assertEquals(0, uidDef.getMinOccurs());
         assertFalse("No UID display name", StringUtils.isBlank(uidDef.getDisplayName()));
@@ -744,7 +752,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertTrue("No UID read", uidDef.canRead());
         assertTrue("UID definition not in identifiers", accountDef.getPrimaryIdentifiers().contains(uidDef));
 
-        ResourceAttributeDefinition<?> nameDef = accountDef.findAttributeDefinition(SchemaConstants.ICFS_NAME);
+        ShadowSimpleAttributeDefinition<?> nameDef = accountDef.findSimpleAttributeDefinitionRequired(SchemaConstants.ICFS_NAME);
         assertEquals(1, nameDef.getMaxOccurs());
         assertEquals(1, nameDef.getMinOccurs());
         assertFalse("No NAME displayName", StringUtils.isBlank(nameDef.getDisplayName()));
@@ -756,8 +764,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertEquals("Wrong NAME displayOrder", (Integer) 110, nameDef.getDisplayOrder());
         assertEquals("Wrong NAME displayName", "Username", nameDef.getDisplayName());
 
-        ResourceAttributeDefinition<?> fullnameDef = accountDef.findAttributeDefinition("fullname");
-        assertNotNull("No definition for fullname", fullnameDef);
+        ShadowSimpleAttributeDefinition<?> fullnameDef = accountDef.findSimpleAttributeDefinitionRequired("fullname");
         assertEquals(1, fullnameDef.getMaxOccurs());
         assertEquals(1, fullnameDef.getMinOccurs());
         assertTrue("No fullname create", fullnameDef.canAdd());
@@ -769,19 +776,34 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         }
         assertEquals("Wrong fullname displayName", null, fullnameDef.getDisplayName());
 
-        assertNull("The _PASSWORD_ attribute sneaked into schema",
-                accountDef.findAttributeDefinition(new QName(SchemaConstants.NS_ICF_SCHEMA, "password")));
+        assertNull("The _PASSWORD_ attribute sneaked into schema", accountDef.findSimpleAttributeDefinition(ICFS_PASSWORD));
 
-        rememberRefinedResourceSchema(refinedSchema);
+        ShadowSimpleAttributeDefinition<?> weaponDef = accountDef.findSimpleAttributeDefinitionRequired("weapon");
+        assertThat(weaponDef.getMatchingRuleQName())
+                .as("weapon matching rule")
+                .isEqualTo(PrismConstants.STRING_IGNORE_CASE_MATCHING_RULE_NAME);
+        assertThat(weaponDef.getTypeName())
+                .as("weapon type name")
+                .isEqualTo(DOMUtil.XSD_STRING);
+        // FIXME???
+//        ResourceAttributeDefinition<?> rawWeaponDef = weaponDef.getNativeDefinition();
+//        assertThat(rawWeaponDef.getMatchingRuleQName())
+//                .as("weapon matching rule in the raw definition")
+//                .isNull();
+//        assertThat(rawWeaponDef.getTypeName())
+//                .as("weapon type name in the raw definition")
+//                .isEqualTo(DOMUtil.XSD_STRING);
 
-        // FIXME re-enable this assert when there's a little time
-//        assertEquals("Unexpected number of schema definitions",
-//                getExpectedRefinedSchemaDefinitions(),
-//                refinedSchema.getDefinitions().size());
+        assertCompleteSchema(completeSchema);
+
+        rememberRefinedResourceSchema(completeSchema);
 
         assertSteadyResource();
         dummyResource.assertConnections(4);
         assertDummyConnectorInstances(1);
+    }
+
+    protected void assertCompleteSchema(CompleteResourceSchema completeSchema) throws CommonException {
     }
 
     /**
@@ -796,13 +818,15 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         // The returned type should have the schema pre-parsed
         assertTrue(ResourceSchemaFactory.hasParsedSchema(resourceBean));
 
-        // Also test if the utility method returns the same thing
-        ResourceSchema returnedSchema = ResourceSchemaFactory.getRawSchema(resourceBean);
+        var completeSchema = ResourceSchemaFactory.getCompleteSchema(resourceBean);
+        displayDumpable("Parsed complete schema", completeSchema);
 
-        displayDumpable("Parsed resource schema", returnedSchema);
-        assertSchemaSanity(returnedSchema, resourceBean);
+        var bareSchema = ResourceSchemaFactory.getBareSchema(resourceBean);
 
-        assertResourceSchemaUnchanged(returnedSchema);
+        // The sanity is checked against the bare schema; it was this way before 4.9, and the asserts are written for this
+        assertBareSchemaSanity(bareSchema, resourceBean);
+
+        assertNativeSchemaCached(bareSchema);
         assertSteadyResource();
     }
 
@@ -818,9 +842,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         ResourceType resourceType = resource.asObjectable();
 
         then();
-        result.computeStatus();
-        display("getObject result", result);
-        TestUtil.assertSuccess(result);
+        assertSuccessVerbose(result);
 
         // Check native capabilities
         CapabilityCollectionType nativeCapabilities = resourceType.getCapabilities().getNative();
@@ -930,7 +952,6 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
     @Test
     public void test029CapabilitiesRepo() throws Exception {
         // GIVEN
-        Task task = getTestTask();
         OperationResult result = createOperationResult();
 
         // WHEN
@@ -938,9 +959,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 repositoryService.getObject(ResourceType.class, RESOURCE_DUMMY_OID, null, result);
 
         // THEN
-        result.computeStatus();
-        display("getObject result", result);
-        TestUtil.assertSuccess(result);
+        assertSuccessVerbose(result);
 
         // Check native capabilities
         ResourceType resourceType = resource.asObjectable();
@@ -1029,7 +1048,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 resourceManager.getConfiguredConnectorInstance(
                         resourceBean, ReadCapabilityType.class, false, result);
         assertNotNull("No configuredConnectorInstance", configuredConnectorInstance);
-        ResourceSchema resourceSchema = ResourceSchemaFactory.getRawSchema(resource);
+        ResourceSchema resourceSchema = ResourceSchemaFactory.getCompleteSchemaRequired(resource);
         assertNotNull("No resource schema", resourceSchema);
 
         // WHEN
@@ -1051,7 +1070,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertTrue("Configurations not equivalent", configurationContainer.equivalent(configurationContainerAgain));
 
         // Check resource schema caching
-        ResourceSchema resourceSchemaAgain = ResourceSchemaFactory.getRawSchema(resourceAgain);
+        ResourceSchema resourceSchemaAgain = ResourceSchemaFactory.getCompleteSchemaRequired(resourceAgain);
         assertNotNull("No resource schema (again)", resourceSchemaAgain);
         assertTrue("Resource schema was not cached", resourceSchema == resourceSchemaAgain);
 
@@ -1108,7 +1127,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 resourceManager.getConfiguredConnectorInstance(
                         resourceBean, ReadCapabilityType.class, false, result);
         assertNotNull("No configuredConnectorInstance", configuredConnectorInstance);
-        ResourceSchema resourceSchema = ResourceSchemaFactory.getRawSchema(resource);
+        ResourceSchema resourceSchema = ResourceSchemaFactory.getCompleteSchemaRequired(resource);
         assertNotNull("No resource schema", resourceSchema);
 
         // WHEN
@@ -1127,7 +1146,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                 .findContainer(ResourceType.F_CONNECTOR_CONFIGURATION);
         assertTrue("Configurations not equivalent", configurationContainer.equivalent(configurationContainerAgain));
 
-        ResourceSchema resourceSchemaAgain = ResourceSchemaFactory.getRawSchema(resourceAgain);
+        ResourceSchema resourceSchemaAgain = ResourceSchemaFactory.getCompleteSchemaRequired(resourceAgain);
         assertNotNull("No resource schema (again)", resourceSchemaAgain);
         assertTrue("Resource schema was not cached", resourceSchema == resourceSchemaAgain);
 
@@ -1155,25 +1174,28 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
     }
 
     @Test
+    public void test038AddAccountDaemon() throws Exception {
+        addAccountDaemon(getTestOperationResult());
+    }
+
+    @Test
     public void test040ApplyDefinitionShadow() throws Exception {
-        // GIVEN
-        Task task = getTestTask();
-        OperationResult result = task.getResult();
+        var task = getTestTask();
+        var result = task.getResult();
 
         PrismObject<ShadowType> account = PrismTestUtil.parseObject(getAccountWillFile());
 
-        // WHEN
+        when("definitions are applied");
         provisioningService.applyDefinition(account, task, result);
 
-        // THEN
-        result.computeStatus();
-        display("applyDefinition result", result);
-        TestUtil.assertSuccess(result);
+        then("result is SUCCESS");
+        assertSuccessVerbose(result);
 
-        account.checkConsistence(true, true);
-        ShadowUtil.checkConsistence(account, getTestNameShort());
-        TestUtil.assertSuccess("applyDefinition(account) result", result);
+        and("all is consistent");
+        display("account", account);
+        checkShadowConsistence(account);
 
+        and("others");
         assertSteadyResource();
     }
 
@@ -1290,17 +1312,21 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         ProvisioningContext ctx = provisioningContextFactory.createForShadowCoordinates(coords, task, result);
 
         // WHEN
-        AttributesToReturn attributesToReturn = ctx.createAttributesToReturn();
+        ShadowItemsToReturn shadowItemsToReturn = ctx.createAttributesToReturn();
 
         // THEN
-        displayValue("attributesToReturn", attributesToReturn);
-        assertFalse("wrong isReturnDefaultAttributes", attributesToReturn.isReturnDefaultAttributes());
-        Collection<String> attrs = new ArrayList<>();
-        for (ResourceAttributeDefinition<?> attributeToReturnDef : attributesToReturn.getAttributesToReturn()) {
-            attrs.add(attributeToReturnDef.getItemName().getLocalPart());
-        }
+        displayValue("attributesToReturn", shadowItemsToReturn);
+        assertFalse("wrong isReturnDefaultAttributes", shadowItemsToReturn.isReturnDefaultAttributes());
+        var attrsToGet = shadowItemsToReturn.getItemsToReturn().stream()
+                .map(itemDef -> itemDef.getItemName().getLocalPart())
+                .toList();
+
         // No "members" attribute here
-        PrismAsserts.assertSets("Wrong attribute to return", attrs, "uid", "name", "description", "cc");
+        List<String> expectedValues = new ArrayList<>(List.of("uid", "name", "description", "cc"));
+        if (areReferencesSupportedNatively()) {
+            expectedValues.add(DummyDefaultScenario.Group.LinkNames.GROUP.local());
+        }
+        PrismAsserts.assertSets("Wrong attribute to return", attrsToGet, expectedValues);
 
         assertSteadyResource();
     }
@@ -1339,23 +1365,20 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
     @Test
     public void test100AddAccountWill() throws Exception {
-        // GIVEN
         Task task = getTestTask();
         OperationResult result = task.getResult();
         syncServiceMock.reset();
 
-        PrismObject<ShadowType> account = prismContext.parseObject(getAccountWillFile());
-        account.checkConsistence();
+        PrismObject<ShadowType> accountToAdd = prismContext.parseObject(getAccountWillFile());
+        accountToAdd.checkConsistence();
 
-        display("Adding shadow", account);
+        display("Adding shadow", accountToAdd);
 
         XMLGregorianCalendar start = clock.currentTimeXMLGregorianCalendar();
 
-        // WHEN
-        when();
-        String addedObjectOid = provisioningService.addObject(account, null, null, task, result);
+        when("object is added");
+        String addedObjectOid = provisioningService.addObject(accountToAdd, null, null, task, result);
 
-        // THEN
         then();
         assertSuccess(result);
 
@@ -1363,196 +1386,187 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
         assertEquals(ACCOUNT_WILL_OID, addedObjectOid);
 
-        account.checkConsistence();
+        accountToAdd.checkConsistence();
 
-        PrismObject<ShadowType> accountRepo = getShadowRepo(ACCOUNT_WILL_OID);
+        and("repo shadow is OK");
+        var repoShadow = getShadowRepo(ACCOUNT_WILL_OID);
+
         // Added account is slightly different case. Even not-returned-by-default attributes are stored in the cache.
-        checkRepoAccountShadowWill(accountRepo, start, end);
+        checkRepoAccountShadowWill(repoShadow, start, end, true);
 
-        willIcfUid = getIcfUid(accountRepo);
+        willIcfUid = getIcfUid(repoShadow);
         displayValue("Will ICF UID", willIcfUid);
         assertNotNull("No will ICF UID", willIcfUid);
 
-        ActivationType activationRepo = accountRepo.asObjectable().getActivation();
+        ActivationType activationRepo = repoShadow.getBean().getActivation();
         if (supportsActivation()) {
-            assertNotNull("No activation in " + accountRepo + " (repo)", activationRepo);
-            assertEquals("Wrong activation enableTimestamp in " + accountRepo + " (repo)", ACCOUNT_WILL_ENABLE_TIMESTAMP, activationRepo.getEnableTimestamp());
+            assertNotNull("No activation in " + repoShadow + " (repo)", activationRepo);
+            assertEquals("Wrong activation enableTimestamp in " + repoShadow + " (repo)", ACCOUNT_WILL_ENABLE_TIMESTAMP, activationRepo.getEnableTimestamp());
         } else {
             assertNull("Activation sneaked in (repo)", activationRepo);
         }
-        assertWillRepoShadowAfterCreate(accountRepo);
+        assertWillRepoShadowAfterCreate(repoShadow);
 
+        and("notification is sent");
         syncServiceMock.assertSingleNotifySuccessOnly();
 
-        PrismObject<ShadowType> accountProvisioning = provisioningService.getObject(ShadowType.class,
-                ACCOUNT_WILL_OID, null, task, result);
+        and("the account can be read back via provisioning");
+        var shadowAfter = provisioningService.getShadow(ACCOUNT_WILL_OID, null, task, result);
 
         XMLGregorianCalendar tsAfterRead = clock.currentTimeXMLGregorianCalendar();
 
-        display("Account provisioning", accountProvisioning);
-        ShadowType accountTypeProvisioning = accountProvisioning.asObjectable();
-        display("account from provisioning", accountTypeProvisioning);
-        assertShadowName(accountProvisioning, ACCOUNT_WILL_USERNAME);
-        assertEquals("Wrong kind (provisioning)", ShadowKindType.ACCOUNT, accountTypeProvisioning.getKind());
-        assertAttribute(accountProvisioning, SchemaConstants.ICFS_NAME, transformNameFromResource(ACCOUNT_WILL_USERNAME));
-        assertAttribute(accountProvisioning, getUidMatchingRule(), SchemaConstants.ICFS_UID, willIcfUid);
+        assertShadowNew(shadowAfter)
+                .display()
+                .assertName(getWillNameOnResource())
+                .assertKind(ShadowKindType.ACCOUNT)
+                .assertOrigValues(SchemaConstants.ICFS_NAME, getWillNameOnResource())
+                .assertOrigValues(SchemaConstants.ICFS_UID, willIcfUid)
+                .attributes()
+                .assertNoSimpleAttribute(new QName(SchemaConstants.NS_ICF_SCHEMA, "password"));
 
-        ActivationType activationProvisioning = accountTypeProvisioning.getActivation();
+        ActivationType activation = shadowAfter.getBean().getActivation();
         if (supportsActivation()) {
-            assertNotNull("No activation in " + accountProvisioning + " (provisioning)", activationProvisioning);
-            assertEquals("Wrong activation administrativeStatus in " + accountProvisioning + " (provisioning)",
-                    ActivationStatusType.ENABLED, activationProvisioning.getAdministrativeStatus());
-            TestUtil.assertEqualsTimestamp("Wrong activation enableTimestamp in " + accountProvisioning + " (provisioning)",
-                    ACCOUNT_WILL_ENABLE_TIMESTAMP, activationProvisioning.getEnableTimestamp());
+            assertNotNull("No activation in " + shadowAfter + " (provisioning)", activation);
+            assertEquals("Wrong activation administrativeStatus in " + shadowAfter + " (provisioning)",
+                    ActivationStatusType.ENABLED, activation.getAdministrativeStatus());
+            TestUtil.assertEqualsTimestamp("Wrong activation enableTimestamp in " + shadowAfter + " (provisioning)",
+                    ACCOUNT_WILL_ENABLE_TIMESTAMP, activation.getEnableTimestamp());
         } else {
-            assertNull("Activation sneaked in (provisioning)", activationProvisioning);
+            assertNull("Activation sneaked in (provisioning)", activation);
         }
 
-        assertNull("The _PASSWORD_ attribute sneaked into shadow", ShadowUtil.getAttributeValues(
-                accountTypeProvisioning, new QName(SchemaConstants.NS_ICF_SCHEMA, "password")));
+        and("the account was created on the dummy resource");
 
-        // Check if the account was created in the dummy resource
-
-        DummyAccount dummyAccount = getDummyAccountAssert(transformNameFromResource(ACCOUNT_WILL_USERNAME), willIcfUid);
+        DummyAccount dummyAccount = getDummyAccountAssert(getWillNameOnResource(), willIcfUid);
         assertNotNull("No dummy account", dummyAccount);
-        assertEquals("Username is wrong", transformNameFromResource(ACCOUNT_WILL_USERNAME), dummyAccount.getName());
+        assertEquals("Username is wrong", getWillNameOnResource(), dummyAccount.getName());
         assertEquals("Fullname is wrong", "Will Turner", dummyAccount.getAttributeValue("fullname"));
         assertTrue("The account is not enabled", dummyAccount.isEnabled());
         assertEquals("Wrong password", ACCOUNT_WILL_PASSWORD, dummyAccount.getPassword());
 
         // Check if the shadow is still in the repo (e.g. that the consistency or sync haven't removed it)
-        PrismObject<ShadowType> shadowFromRepo = getShadowRepo(addedObjectOid);
-        assertNotNull("Shadow was not created in the repository", shadowFromRepo);
-        displayValue("Repository shadow", shadowFromRepo.debugDump());
+        var repoShadow2 = getShadowRepo(addedObjectOid);
+        displayValue("Repository shadow", repoShadow2.debugDump());
 
-        checkRepoAccountShadow(shadowFromRepo);
-
-        checkRepoAccountShadowWill(shadowFromRepo, end, tsAfterRead);
+        checkRepoAccountShadow(repoShadow2);
+        checkRepoAccountShadowWill(repoShadow2, end, tsAfterRead);
 
         // MID-3860
-        assertShadowPasswordMetadata(shadowFromRepo, true, start, end, null, null);
-        assertRepoShadowCredentials(shadowFromRepo, ACCOUNT_WILL_PASSWORD);
+        assertShadowPasswordMetadata(repoShadow2.getPrismObject(), true, start, end, null, null);
+        assertRepoShadowCredentials(repoShadow2, ACCOUNT_WILL_PASSWORD);
         lastPasswordModifyStart = start;
         lastPasswordModifyEnd = end;
 
-        checkUniqueness(accountProvisioning);
+        checkUniqueness(shadowAfter);
         assertSteadyResource();
     }
 
-    protected void assertWillRepoShadowAfterCreate(PrismObject<ShadowType> repoShadow) {
+    protected void assertWillRepoShadowAfterCreate(RawRepoShadow repoShadow) throws SchemaException, ConfigurationException {
         // for the subclasses
     }
 
-    protected void checkRepoAccountShadowWillBasic(PrismObject<ShadowType> accountRepo,
-            XMLGregorianCalendar start, XMLGregorianCalendar end, Integer expectedNumberOfAttributes) throws CommonException {
-        display("Will account repo", accountRepo);
-        ShadowType accountTypeRepo = accountRepo.asObjectable();
-        assertShadowName(accountRepo, ACCOUNT_WILL_USERNAME);
+    void checkRepoAccountShadowWillBasic(
+            RawRepoShadow accountRepo,
+            XMLGregorianCalendar start,
+            XMLGregorianCalendar end,
+            boolean rightAfterCreate,
+            Integer expectedNumberOfAttributes) throws CommonException {
+        // At the moment of creation, we do not know that the icfs:name is upper-cased (for up-casing resource).
+        // The reason is that the ConnId returns only the UID (up-cased), so midPoint does not know that the name
+        // was converted as well.
+        String expectedIcfsName = rightAfterCreate ? ACCOUNT_WILL_USERNAME : getWillNameOnResource();
+        var asserter = assertRepoShadowNew(accountRepo)
+                .display()
+                .assertName(expectedIcfsName)
+                .assertIndexedPrimaryIdentifierValue(
+                        isIcfNameUidSame() ? getWillRepoIcfNameNorm() : getIcfUid(accountRepo))
+                .assertKind(ShadowKindType.ACCOUNT)
+                .assertCachedOrigValues(SchemaConstants.ICFS_NAME, expectedIcfsName);
 
-        if (isIcfNameUidSame()) {
-            assertPrimaryIdentifierValue(accountRepo, getWillRepoIcfName());
-        } else {
-            assertPrimaryIdentifierValue(accountRepo, getIcfUid(accountRepo));
+        if (expectedNumberOfAttributes != null) {
+            asserter.assertAttributes(expectedNumberOfAttributes);
         }
 
-        assertEquals("Wrong kind (repo)", ShadowKindType.ACCOUNT, accountTypeRepo.getKind());
-        assertAttribute(accountRepo, SchemaConstants.ICFS_NAME, getWillRepoIcfName());
         if (isIcfNameUidSame() && !isProposedShadow(accountRepo)) {
-            assertAttribute(accountRepo, SchemaConstants.ICFS_UID, getWillRepoIcfName());
+            asserter.assertCachedOrigValues(SchemaConstants.ICFS_UID, getWillNameOnResource());
         }
 
-        assertNumberOfAttributes(accountRepo, expectedNumberOfAttributes);
-
-        assertRepoCachingMetadata(accountRepo, start, end);
+        assertRepoCachingMetadata(accountRepo.getPrismObject(), start, end);
     }
 
-    protected void assertPrimaryIdentifierValue(PrismObject<ShadowType> shadow, String expected) {
-        if (shadow.asObjectable().getLifecycleState() == null || shadow.asObjectable().getLifecycleState().equals(SchemaConstants.LIFECYCLE_ACTIVE)) {
-            assertEquals("Wrong primaryIdentifierValue in " + shadow, expected, shadow.asObjectable().getPrimaryIdentifierValue());
-        }
-    }
-
-    private boolean isProposedShadow(PrismObject<ShadowType> shadow) throws CommonException {
-        provisioningService.determineShadowState(shadow, getTestTask(), getTestOperationResult());
-        return shadow.asObjectable().getShadowLifecycleState() == ShadowLifecycleStateType.PROPOSED;
+    private boolean isProposedShadow(RawRepoShadow shadow) throws CommonException {
+        provisioningService.determineShadowState(shadow.getPrismObject(), getTestTask(), getTestOperationResult());
+        return shadow.getBean().getShadowLifecycleState() == ShadowLifecycleStateType.PROPOSED;
     }
 
     protected void checkRepoAccountShadowWill(
-            PrismObject<ShadowType> accountRepo, XMLGregorianCalendar start, XMLGregorianCalendar end) throws CommonException {
-        checkRepoAccountShadowWillBasic(accountRepo, start, end, 2);
-        assertRepoShadowCacheActivation(accountRepo, null);
+            RawRepoShadow repoAccount, XMLGregorianCalendar start, XMLGregorianCalendar end) throws CommonException {
+        checkRepoAccountShadowWill(repoAccount, start, end, false);
+    }
+
+    protected void checkRepoAccountShadowWill(
+            RawRepoShadow repoAccount, XMLGregorianCalendar start, XMLGregorianCalendar end,
+            boolean rightAfterCreate) throws CommonException {
+        checkRepoAccountShadowWillBasic(repoAccount, start, end, rightAfterCreate, 2);
+        assertRepoShadowCacheActivation(repoAccount, ActivationStatusType.ENABLED);
     }
 
     // test101 in the subclasses
 
     @Test
     public void test102GetAccountWill() throws Exception {
-        // GIVEN
         Task task = getTestTask();
         OperationResult result = createOperationResult();
         rememberCounter(InternalCounters.SHADOW_FETCH_OPERATION_COUNT);
 
         XMLGregorianCalendar startTs = clock.currentTimeXMLGregorianCalendar();
 
-        // WHEN
-        PrismObject<ShadowType> shadow =
-                provisioningService.getObject(ShadowType.class, ACCOUNT_WILL_OID, null, task, result);
+        when();
+        var shadow = provisioningService.getShadow(ACCOUNT_WILL_OID, null, task, result);
 
-        // THEN
-        result.computeStatus();
-        display("getObject result", result);
-        TestUtil.assertSuccess(result);
-        assertCounterIncrement(InternalCounters.SHADOW_FETCH_OPERATION_COUNT, 1);
-
+        then();
         XMLGregorianCalendar endTs = clock.currentTimeXMLGregorianCalendar();
 
-        display("Retrieved account shadow", shadow);
-
-        assertNotNull("No dummy account", shadow);
+        assertSuccessVerbose(result);
+        assertCounterIncrement(InternalCounters.SHADOW_FETCH_OPERATION_COUNT, 1);
 
         checkAccountWill(shadow, result, startTs, endTs);
-        PrismObject<ShadowType> shadowRepo = getShadowRepo(ACCOUNT_WILL_OID);
-        checkRepoAccountShadowWill(shadowRepo, startTs, endTs);
+
+        var repoShadow = getShadowRepo(ACCOUNT_WILL_OID);
+        checkRepoAccountShadowWill(repoShadow, startTs, endTs);
 
         checkUniqueness(shadow);
 
-        assertCachingMetadata(shadow, false, startTs, endTs);
+        assertCachingMetadata(shadow.getBean(), startTs, endTs);
+        assertCachingMetadata(repoShadow.getBean(), startTs, endTs);
 
-        // MID-3860
-        assertShadowPasswordMetadata(shadow, true, lastPasswordModifyStart, lastPasswordModifyEnd, null, null);
+        assertShadowPasswordMetadata( // MID-3860
+                shadow.getPrismObject(), true,
+                lastPasswordModifyStart, lastPasswordModifyEnd, null, null);
 
         assertSteadyResource();
     }
 
     @Test
     public void test103GetAccountWillNoFetch() throws Exception {
-        // GIVEN
         Task task = getTestTask();
         OperationResult result = createOperationResult();
         rememberCounter(InternalCounters.SHADOW_FETCH_OPERATION_COUNT);
 
-        GetOperationOptions rootOptions = new GetOperationOptions();
-        rootOptions.setNoFetch(true);
-        Collection<SelectorOptions<GetOperationOptions>> options = SelectorOptions.createCollection(rootOptions);
-
         XMLGregorianCalendar startTs = clock.currentTimeXMLGregorianCalendar();
 
-        // WHEN
-        PrismObject<ShadowType> shadow = provisioningService.getObject(ShadowType.class,
-                ACCOUNT_WILL_OID, options, task, result);
+        when();
+        var shadow = provisioningService.getShadow(ACCOUNT_WILL_OID, createNoFetchCollection(), task, result);
 
-        // THEN
-        display("getObject result", result);
-        assertSuccess(result);
+        then();
+        assertSuccessVerbose(result);
         assertCounterIncrement(InternalCounters.SHADOW_FETCH_OPERATION_COUNT, 0);
 
-        display("Retrieved account shadow", shadow);
-
-        assertNotNull("No dummy account", shadow);
-
         checkAccountShadow(shadow, result, false);
+
         // This is noFetch. Therefore the read should NOT update the caching timestamp
-        checkRepoAccountShadowWill(shadow, null, startTs);
+        var repoShadow = getShadowRepo(ACCOUNT_WILL_OID);
+        checkRepoAccountShadowWill(repoShadow, null, startTs);
 
         checkUniqueness(shadow);
 
@@ -1561,19 +1575,18 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
     @Test
     public void test105ApplyDefinitionModifyDelta() throws Exception {
-        // GIVEN
         Task task = getTestTask();
         OperationResult result = task.getResult();
 
-        ObjectModificationType accountDeltaBean = PrismTestUtil.parseAtomicValue(MODIFY_WILL_FULLNAME_FILE,
-                ObjectModificationType.COMPLEX_TYPE);
-        ObjectDelta<ShadowType> accountDelta = DeltaConvertor.createObjectDelta(accountDeltaBean,
-                ShadowType.class, prismContext);
+        ObjectModificationType accountDeltaBean =
+                PrismTestUtil.parseAtomicValue(MODIFY_WILL_FULLNAME_FILE, ObjectModificationType.COMPLEX_TYPE);
+        ObjectDelta<ShadowType> accountDelta =
+                DeltaConvertor.createObjectDelta(accountDeltaBean, ShadowType.class);
 
-        // WHEN
+        when();
         provisioningService.applyDefinition(accountDelta, task, result);
 
-        // THEN
+        then();
         assertSuccess(result);
 
         accountDelta.checkConsistence(true, true, true);
@@ -1593,7 +1606,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         OperationResult result = createOperationResult();
         rememberCounter(InternalCounters.SHADOW_FETCH_OPERATION_COUNT);
 
-        DummyAccount accountWill = getDummyAccountAssert(transformNameFromResource(ACCOUNT_WILL_USERNAME), willIcfUid);
+        DummyAccount accountWill = getDummyAccountAssert(getWillNameOnResource(), willIcfUid);
         accountWill.replaceAttributeValue(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_TITLE_NAME, "Pirate");
         accountWill.replaceAttributeValue(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_SHIP_NAME, "Black Pearl");
         accountWill.setEnabled(false);
@@ -1601,7 +1614,7 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         XMLGregorianCalendar startTs = clock.currentTimeXMLGregorianCalendar();
 
         when();
-        PrismObject<ShadowType> shadow = provisioningService.getObject(ShadowType.class, ACCOUNT_WILL_OID, null, task, result);
+        var shadow = provisioningService.getShadow(ACCOUNT_WILL_OID, null, task, result);
 
         then();
         assertSuccess(result);
@@ -1609,32 +1622,54 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
         XMLGregorianCalendar endTs = clock.currentTimeXMLGregorianCalendar();
 
-        display("Retrieved account shadow", shadow);
+        ShadowAsserter.forAbstractShadow(shadow)
+                .display()
+                .assertOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_TITLE_NAME, "Pirate")
+                .assertOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_SHIP_NAME, "Black Pearl")
+                .assertOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_WEAPON_NAME, "Sword", "LOVE")
+                .assertNormValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_WEAPON_NAME, "sword", "love")
+                .assertOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_LOOT_NAME, 42L)
+                .assertAttributes(7);
 
-        assertNotNull("No dummy account", shadow);
+        var repoShadow = getShadowRepo(ACCOUNT_WILL_OID);
+        checkRepoAccountShadowWillBasic(repoShadow, startTs, endTs, false, null);
 
-        assertAttribute(shadow, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_TITLE_NAME, "Pirate");
-        assertAttribute(shadow, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_SHIP_NAME, "Black Pearl");
-        assertAttribute(shadow, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_WEAPON_NAME, "Sword", "LOVE");
-        assertAttribute(shadow, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_LOOT_NAME, 42);
-        Collection<ResourceAttribute<?>> attributes = ShadowUtil.getAttributes(shadow);
-        assertEquals("Unexpected number of attributes", 7, attributes.size());
-
-        PrismObject<ShadowType> shadowRepo = getShadowRepo(ACCOUNT_WILL_OID);
-        checkRepoAccountShadowWillBasic(shadowRepo, startTs, endTs, null);
-
-        assertRepoShadowCachedAttributeValue(shadowRepo, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_TITLE_NAME, "Pirate");
-        assertRepoShadowCachedAttributeValue(shadowRepo, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_SHIP_NAME, "Black Pearl");
-        assertRepoShadowCachedAttributeValue(shadowRepo, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_WEAPON_NAME, "sword", "love");
-        assertRepoShadowCachedAttributeValue(shadowRepo, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_LOOT_NAME, 42);
-        assertRepoShadowCacheActivation(shadowRepo, ActivationStatusType.DISABLED);
-        assertRepoShadowCredentials(shadowRepo, ACCOUNT_WILL_PASSWORD);
+        assertRepoShadowNew(repoShadow)
+                .assertCachedOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_TITLE_NAME, "Pirate")
+                .assertCachedOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_SHIP_NAME, "Black Pearl")
+                .assertCachedOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_WEAPON_NAME, "Sword", "LOVE")
+                .assertCachedNormValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_WEAPON_NAME, "sword", "love")
+                .assertCachedOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_LOOT_NAME, 42L);
+        assertRepoShadowCacheActivation(repoShadow, ActivationStatusType.DISABLED);
+        assertRepoShadowCredentials(repoShadow, ACCOUNT_WILL_PASSWORD);
 
         checkUniqueness(shadow);
 
-        assertCachingMetadata(shadow, false, startTs, endTs);
+        assertCachingMetadata(shadow.getBean(), startTs, endTs);
 
         assertSteadyResource();
+    }
+
+    @NotNull ResourceObjectDefinition getAccountDefaultDefinition() throws SchemaException, ConfigurationException {
+        return MiscUtil.stateNonNull(
+                Resource.of(resourceBean)
+                        .getCompleteSchemaRequired()
+                        .getObjectTypeDefinition(ShadowKindType.ACCOUNT, SchemaConstants.INTENT_DEFAULT),
+                "No account/default definition in %s", resourceBean);
+    }
+
+    @NotNull ResourceObjectDefinition getGroupDefaultDefinition() throws SchemaException, ConfigurationException {
+        return MiscUtil.stateNonNull(
+                Resource.of(resourceBean)
+                        .getCompleteSchemaRequired()
+                        .findDefinitionForObjectClass(RI_GROUP_OBJECT_CLASS),
+                "No group definition in %s", resourceBean);
+    }
+
+    protected @NotNull Collection<? extends QName> getCachedAccountAttributes() throws SchemaException, ConfigurationException {
+        return InternalsConfig.isShadowCachingOnByDefault() ?
+                getAccountDefaultDefinition().getAttributeNames() :
+                getAccountDefaultDefinition().getAllIdentifiersNames();
     }
 
     @Test
@@ -1644,37 +1679,73 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
 
         then();
         dummyResource.assertNoConnections();
+
+        resourceShutDown = true;
     }
 
-    protected void checkAccountWill(PrismObject<ShadowType> shadow, OperationResult result,
+    protected void checkAccountWill(
+            AbstractShadow shadow, OperationResult result,
             XMLGregorianCalendar startTs, XMLGregorianCalendar endTs)
             throws SchemaException, EncryptionException, ConfigurationException {
         checkAccountShadow(shadow, result, true);
-        Collection<ResourceAttribute<?>> attributes = ShadowUtil.getAttributes(shadow);
-        assertAttribute(shadow, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_SHIP_NAME, "Flying Dutchman");
-        assertAttribute(shadow, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_WEAPON_NAME, "Sword", "LOVE");
-        assertAttribute(shadow, DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_LOOT_NAME, 42);
-        assertEquals("Unexpected number of attributes", 6, attributes.size());
+        ShadowAsserter.forAbstractShadow(shadow)
+                .display()
+                .assertOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_SHIP_NAME, "Flying Dutchman")
+                .assertOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_WEAPON_NAME, "Sword", "LOVE")
+                .assertNormValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_WEAPON_NAME, "sword", "love")
+                .assertOrigValues(DummyResourceContoller.DUMMY_ACCOUNT_ATTRIBUTE_LOOT_NAME, 42L)
+                .assertAttributes(6);
     }
 
-    /**
-     * We do not know what the timestamp should be
-     */
     protected void assertRepoCachingMetadata(PrismObject<ShadowType> shadowRepo, XMLGregorianCalendar start, XMLGregorianCalendar end) {
-        assertNull("Unexpected caching metadata in " + shadowRepo, shadowRepo.asObjectable().getCachingMetadata());
+        assertRepoCachingMetadata(shadowRepo, start, end, InternalsConfig.isShadowCachingOnByDefault());
     }
 
-    protected void assertCachingMetadata(PrismObject<ShadowType> shadow, boolean expectedCached, XMLGregorianCalendar startTs, XMLGregorianCalendar endTs) {
-        assertNull("Unexpected caching metadata in " + shadow, shadow.asObjectable().getCachingMetadata());
+    void assertRepoCachingMetadata(
+            PrismObject<ShadowType> shadowFromRepo,
+            XMLGregorianCalendar start,
+            XMLGregorianCalendar end,
+            boolean shouldBePresent) {
+        if (shouldBePresent) {
+            CachingMetadataType cachingMetadata = shadowFromRepo.asObjectable().getCachingMetadata();
+            assertNotNull("No caching metadata in " + shadowFromRepo, cachingMetadata);
+
+            TestUtil.assertBetween("retrieval timestamp in caching metadata in " + shadowFromRepo,
+                    start, end, cachingMetadata.getRetrievalTimestamp());
+        } else {
+            assertNull("Unexpected caching metadata in " + shadowFromRepo, shadowFromRepo.asObjectable().getCachingMetadata());
+        }
     }
 
-    protected void checkAccountShadow(
-            PrismObject<ShadowType> shadowType, OperationResult parentResult, boolean fullShadow)
+    protected void assertCachingMetadata(ShadowType shadow, XMLGregorianCalendar startTs, XMLGregorianCalendar endTs) {
+        assertCachingMetadata(shadow, startTs, endTs, InternalsConfig.isShadowCachingOnByDefault());
+    }
+
+    void assertCachingMetadata(
+            ShadowType shadow,
+            XMLGregorianCalendar startTs,
+            XMLGregorianCalendar endTs,
+            boolean shouldBePresent) {
+        if (shouldBePresent) {
+            CachingMetadataType cachingMetadata = shadow.getCachingMetadata();
+            assertNotNull("No caching metadata in " + shadow, cachingMetadata);
+            TestUtil.assertBetween("retrievalTimestamp in caching metadata in " + shadow, startTs, endTs, cachingMetadata.getRetrievalTimestamp());
+        } else {
+            assertNull("Unexpected caching metadata in " + shadow, shadow.getCachingMetadata());
+        }
+    }
+
+    void checkAccountShadow(
+            AbstractShadow shadow, OperationResult result, boolean fullShadow)
             throws SchemaException, ConfigurationException {
+        assertThat(shadow.getContentDescription())
+                .as("content description")
+                .isEqualTo(fullShadow ? FROM_RESOURCE_COMPLETE : FROM_REPOSITORY);
         ObjectChecker<ShadowType> checker = createShadowChecker(fullShadow);
-        ShadowUtil.checkConsistence(shadowType, parentResult.getOperation());
-        IntegrationTestTools.checkAccountShadow(shadowType.asObjectable(), resourceBean,
-                repositoryService, checker, getUidMatchingRule(), prismContext, parentResult);
+        shadow.checkConsistenceComplex(result.getOperation());
+        IntegrationTestTools.checkAccountShadow(
+                shadow, resourceBean,
+                repositoryService, checker, result);
     }
 
     protected ObjectChecker<ShadowType> createShadowChecker(final boolean fullShadow) {
@@ -1699,26 +1770,49 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
                     }
                 }
 
-                assertProvisioningAccountShadow(shadow.asPrismObject(), resourceBean, ResourceAttributeDefinition.class);
+                assertProvisioningAccountShadow(shadow.asPrismObject(), ShadowSimpleAttributeDefinition.class);
             }
         };
     }
 
-    protected void assertRepoShadowCachedAttributeValue(PrismObject<ShadowType> shadowRepo, String attrName, Object... attrValues) {
-        PrismAsserts.assertNoItem(shadowRepo, ItemPath.create(ShadowType.F_ATTRIBUTES, getAttrQName(attrName)));
-    }
-
-    protected void assertRepoShadowCacheActivation(PrismObject<ShadowType> shadowRepo, ActivationStatusType expectedAdministrativeStatus) {
-        ActivationType activationType = shadowRepo.asObjectable().getActivation();
-        if (activationType == null) {
-            return;
+    /** TODO better name! */
+    protected void assertOptionalAttrValue(AbstractShadow shadow, String attrName, Object... attrValues) {
+        if (!InternalsConfig.isShadowCachingOnByDefault()) {
+            PrismAsserts.assertNoItem(shadow.getPrismObject(), ItemPath.create(ShadowType.F_ATTRIBUTES, getAttrQName(attrName)));
         }
-        ActivationStatusType administrativeStatus = activationType.getAdministrativeStatus();
-        assertNull("Unexpected activation administrativeStatus in repo shadow " + shadowRepo + ": " + administrativeStatus, administrativeStatus);
     }
 
-    protected void assertRepoShadowCredentials(PrismObject<ShadowType> shadowRepo, String expectedPassword) throws SchemaException, EncryptionException {
-        CredentialsType credentials = shadowRepo.asObjectable().getCredentials();
+    protected void assertCachedAttributeValue(AbstractShadow shadow, String attrName, Object... attrValues) {
+        if (!InternalsConfig.isShadowCachingOnByDefault()) {
+            PrismAsserts.assertNoItem(shadow.getPrismObject(), ItemPath.create(ShadowType.F_ATTRIBUTES, getAttrQName(attrName)));
+        }
+    }
+
+    protected void assertRepoShadowCacheActivation(RawRepoShadow shadowRepo, ActivationStatusType expectedAdministrativeStatus) {
+        assertRepoShadowCacheActivation(shadowRepo, expectedAdministrativeStatus, InternalsConfig.isShadowCachingOnByDefault());
+    }
+
+    void assertRepoShadowCacheActivation(
+            RawRepoShadow repoShadow, ActivationStatusType expectedAdministrativeStatus, boolean shouldBePresent) {
+        if (shouldBePresent) {
+            var activationType = repoShadow.getBean().getActivation();
+            assertNotNull("No activation in repo shadow " + repoShadow, activationType);
+            var administrativeStatus = activationType.getAdministrativeStatus();
+            assertEquals("Wrong activation administrativeStatus in repo shadow " + repoShadow, expectedAdministrativeStatus, administrativeStatus);
+        } else {
+            var activation = repoShadow.getBean().getActivation();
+            if (activation != null) {
+                var administrativeStatus = activation.getAdministrativeStatus();
+                assertNull(
+                        "Unexpected activation administrativeStatus in repo shadow " + repoShadow + ": " + administrativeStatus,
+                        administrativeStatus);
+            }
+        }
+    }
+
+    void assertRepoShadowCredentials(RawRepoShadow shadowRepo, String expectedPassword)
+            throws SchemaException, EncryptionException {
+        CredentialsType credentials = shadowRepo.getBean().getCredentials();
         if (expectedPassword == null && credentials == null) {
             return;
         }
@@ -1732,28 +1826,62 @@ public class AbstractBasicDummyTest extends AbstractDummyTest {
         assertRepoShadowPasswordValue(shadowRepo, passwordType, expectedPassword);
     }
 
-    protected void assertRepoShadowPasswordValue(PrismObject<ShadowType> shadowRepo, PasswordType passwordType,
-            String expectedPassword) throws SchemaException, EncryptionException {
-        ProtectedStringType passwordValue = passwordType.getValue();
-        assertNull("Unexpected password value in repo shadow " + shadowRepo, passwordValue);
+    protected void assertRepoShadowPasswordValue(
+            RawRepoShadow shadowRepo, PasswordType passwordBean, String expectedPassword)
+            throws SchemaException, EncryptionException {
+        assertRepoShadowCachePasswordValue(
+                shadowRepo, passwordBean, expectedPassword, InternalsConfig.isShadowCachingOnByDefault());
     }
 
-    protected ResourceAttributeDefinition<?> getAccountAttrDef(String name) throws SchemaException {
-        return requireNonNull(
-                getAccountObjectClassDefinition().findAttributeDefinition(name));
+    void assertRepoShadowCachePasswordValue(
+            RawRepoShadow shadowRepo, PasswordType passwordBean, String expectedPassword, boolean shouldBePresent)
+            throws SchemaException, EncryptionException {
+        if (shouldBePresent) {
+            ProtectedStringType protectedString = passwordBean.getValue();
+            assertNotNull("No password value in repo shadow " + shadowRepo, protectedString);
+            assertProtectedString(
+                    "Wrong password value in repo shadow " + shadowRepo, expectedPassword,
+                    protectedString, CredentialsStorageTypeType.HASHING);
+        } else {
+            ProtectedStringType passwordValue = passwordBean.getValue();
+            assertNull("Unexpected password value in repo shadow " + shadowRepo, passwordValue);
+        }
     }
 
-    protected ResourceAttributeDefinition<?> getAccountAttrDef(QName name) throws SchemaException {
+    protected ShadowSimpleAttributeDefinition<?> getAccountAttrDef(String name) throws SchemaException, ConfigurationException {
         return requireNonNull(
-                getAccountObjectClassDefinition().findAttributeDefinition(name));
+                getAccountObjectClassDefinition().findSimpleAttributeDefinition(name));
+    }
+
+    protected ShadowSimpleAttributeDefinition<?> getAccountAttrDef(QName name) throws SchemaException, ConfigurationException {
+        return requireNonNull(
+                getAccountObjectClassDefinition().findSimpleAttributeDefinition(name));
     }
 
     @NotNull
-    private ResourceObjectClassDefinition getAccountObjectClassDefinition() throws SchemaException {
+    private ResourceObjectClassDefinition getAccountObjectClassDefinition() throws SchemaException, ConfigurationException {
         ResourceSchema resourceSchema =
                 requireNonNull(
-                        ResourceSchemaFactory.getRawSchema(resource));
+                        ResourceSchemaFactory.getCompleteSchemaRequired(resource));
         return requireNonNull(
                 resourceSchema.findObjectClassDefinition(RI_ACCOUNT_OBJECT_CLASS));
+    }
+
+    /** TODO reconcile with {@link #assertRepoShadow(String)} */
+    RepoShadowAsserter<Void> assertRepoShadowNew(@NotNull String oid)
+            throws SchemaException, ConfigurationException, ObjectNotFoundException {
+        return assertRepoShadow(oid, getCachedAccountAttributes());
+    }
+
+    /** TODO reconcile with {@link #assertRepoShadow(String)} */
+    RepoShadowAsserter<Void> assertRepoShadowNew(@NotNull RawRepoShadow rawRepoShadow)
+            throws SchemaException, ConfigurationException {
+        return RepoShadowAsserter.forRepoShadow(rawRepoShadow, getCachedAccountAttributes());
+    }
+
+    /** TODO reconcile with {@link #assertRepoShadow(String)} */
+    RepoShadowAsserter<Void> assertRepoShadowNew(@NotNull PrismObject<ShadowType> rawRepoShadow)
+            throws SchemaException, ConfigurationException {
+        return RepoShadowAsserter.forRepoShadow(rawRepoShadow, getCachedAccountAttributes());
     }
 }
